feat: 기존 supervision api 변경